# sub-server

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml  release-please-config.json
.devcontainer/: .dockerignore  Dockerfile  README.md  devcontainer.json
.github/workflows/: ci.yml  docker.yml  release-please.yml
config/examples/: keys.yaml  servers.yaml  settings.yaml
docs/: ci.md  container.md  development.md  quickstart.md
docs/configuration/: keys.md  override-rules.md  servers.md  settings.md
docs/protocols/: matrix.md  shadowsocks.md  trojan.md  vless.md  vmess.md
src/sub_server/: main.py
src/sub_server/api/: health.py  public.py
src/sub_server/config/: cache.py  loader.py  resolver.py
src/sub_server/core/: exceptions.py  settings.py
src/sub_server/models/: common.py  enums.py  keyrule.py  server.py
src/sub_server/renderers/: base.py  registry.py  shadowsocks.py  trojan.py  vless.py  vmess.py
src/sub_server/services/: encoding.py  override.py  selector.py  subscription.py
src/sub_server/utils/: deepmerge.py  url.py  validators.py
tests/: test_loader.py  test_override.py  test_selector.py  test_shadowsocks_renderer.py  test_subscription.py  test_trojan_renderer.py  test_vless_renderer.py  test_vmess_renderer.py
